# dekun

./: ._dataset  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml  tsconfig.json
src/: __init__.py  main.py
src/core/: unet.py  utils.py
src/dekun/: __init__.py  main.py
src/dekun/core/: dataset.py  lama.py  unet.py  utils.py
src/dekun/core/editor/: main.py  start.sh  vite.config.ts
src/dekun/core/editor-new/: main.py  vite.config.ts
src/dekun/core/editor-new/public/: index.css  index.html  index.tsx
src/dekun/core/editor-new/public/components/: Navbar.tsx  Settings.tsx  Tasks.tsx
src/dekun/core/editor-new/public/scripts/: control.ts  editor.ts  image.ts  state.ts
src/dekun/core/editor-new/static/: index.html
src/dekun/core/editor-new/static/assets/: index-CSb8V8oZ.css  index-ChYVIb48.js  index-CsO-QRo1.css  index-DAR_wWol.js
src/dekun/core/editor-old/: main.py
src/dekun/core/editor-old/public/: editor.css  editor.html  editor.js
src/dekun/core/editor-old/public/drivers/: nHentai.js
src/dekun/core/editor/public/: editor.css  editor.html  editor.js  index.css  index.html  index.tsx
src/dekun/core/editor/public/components/: Entries.tsx  Help.tsx  Keybinds.tsx  Navbar.tsx  Settings.tsx
src/dekun/core/editor/public/drivers/: nHentai.js  pixiv.js
src/dekun/core/editor/public/scripts/: control.ts  editor.ts  image.ts  state.ts
src/dekun/core/editor/static/: index.html
src/dekun/core/playground/: main.py  start.sh  vite.config.ts
src/dekun/core/playground/public/: index.css  index.html  index.tsx
src/dekun/core/playground/static/: index.html
src/dekun/generator/: command.py  model.py
src/dekun/inpainter/: command.py  loader.py  model-old.py  model.py
src/dekun/marker/: command.py  dataset.py  loader.py  model.py
src/dekun/marker/editor/: main.py
src/dekun/marker/editor/public/: editor.html
src/detector/: command.py  dataset.py  model.py
src/detector/editor/: main.py
src/detector/editor/public/: editor.html  editor.js  index.html  index.js  viewer.js
src/generator/: command.py  dataset.py  model.py
src/marker/: command.py  dataset.py  model.py
src/marker/editor/: main.py
src/marker/editor/public/: editor.html  editor.js  viewer.html
src/marker/editor/public/drivers/: nHentai.js  pixiv.js
(+37 files in other folders)
