[project]
name = "dekun"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.0",
    "hypercorn==0.17.0",
    "pillow==11.3.0",
    "requests==2.32.5",
    "starlette==0.48.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "uvloop==0.21.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"dekun.core.editor" = ["static/**"]

[project.scripts]
dekun = "dekun:root_command"

[tool.pyright]
venvPath = "."
venv = ".venv"
