[project]
name = "dekun"
version = "0.1.0"
requires-python = "~=3.10.0"
dependencies = [
    "click==8.2.0",
    "hypercorn==0.17.0",
    "pillow==11.3.0",
    "requests==2.32.5",
    "starlette==0.48.0",
    "uvloop==0.21.0",
    "numpy==2.0.0"
]

[project.optional-dependencies]
cpu = ["torch==2.8.0+cpu", "torchvision==0.23.0+cpu"]
xpu = ["torch==2.8.0+xpu", "torchvision==0.23.0+xpu"]
cuda = ["torch==2.8.0+cu128", "torchvision==0.23.0+cu128"]

[[tool.uv.index]]
name = "main"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [
    [
      { extra = "cpu" },
      { extra = "xpu" },
      { extra = "cuda" }
    ]
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"dekun.core.editor" = ["static/**"]
"dekun.core.playground" = ["static/**"]

[project.scripts]
dekun = "dekun:root_command"

[tool.pyright]
venvPath = "."
venv = ".venv"
